[project]
name = "cargopy"
version = "0.2.2"
description = "Rust Cargo-like project manager for Python"
readme = "README.md"
requires-python = ">= 3.14"
authors = [
{ name = "Kopihue", email = "kopihuegit@gmail.com" }
]

[project.scripts]
cargopy = "cargopy.main:main"

[project.urls]
Homepage = "https://github.com/Kopihue/Cargopy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
