[project]
name = "cargopy"
version = "0.2.7"
description = "Rust Cargo-like project manager for Python"
readme = "README.md"
requires-python = ">= 3.14"
authors = [
{ name = "Kopihue", email = "kopihuegit@gmail.com" }
]
dependencies = [
    "PaintMyString",
]

[project.scripts]
cargopy = "cargopy.main:main"

[project.urls]
Homepage = "https://github.com/Kopihue/Cargopy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cargopy"]
