[project]
name = "kovy"
version = "0.1.5"
description = "Rust Cargo-like project manager for Python"
readme = "README.md"
requires-python = ">= 3.14"
authors = [
{ name = "Kopihue", email = "kopihuegit@gmail.com" }
]
dependencies = [
    "PaintMyString",
]

[project.scripts]
kovy = "kovy.main:main"

[project.urls]
Homepage = "https://github.com/Kopihue/kovy/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kovy"]
